# tabletop

./: .clang-format  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  README.md  apt.list  apt_backup.list  build.sh  calibration.yaml  compose.yaml  disable_cpu_speed_scaling.sh  docker-bake.hcl  get-platformio.py  graph.md  graph_custom.md  gripper.dae  mkdocs.yml  musings.md  nohup.out  out.txt  package.xml  pyproject.toml  requirements-dev.txt  requirements.txt  rig_measurments.ipynb  rosbag2csv.py  ruff.toml  run_docker.sh  server.Dockerfile  setup.bash  setup.cfg  setup.py  test.urdf  (+1 more)
ros/tabletop/: CMakeLists.txt  package.xml
ros/tabletop_description/: CMakeLists.txt  package.xml
ros/tabletop_description/config/: initial_positions.yaml  joint_limits.yaml  ur5e_calibration.yaml
ros/tabletop_description/launch/: rsp.launch.py  tabletop_rsp.launch.py  view_robot.launch.py
ros/tabletop_description/meshes/: 171005_Motek_Monitor_L.dae  fzi_table.dae  planning_scene.pcd  scene.dae  scene_v1.dae  wall.dae
ros/tabletop_description/meshes/collision/: eef.stl
ros/tabletop_description/meshes/dynamic/: complex_object.stl  simple_object.stl
ros/tabletop_description/meshes/static/: rig.dae
ros/tabletop_description/meshes/visual/: eef.bak.stl  eef.stl
ros/tabletop_description/rviz/: urdf.rviz  view_robot.rviz
ros/tabletop_description/trapezoid_rig/: CMakeLists.txt  package.xml
ros/tabletop_description/trapezoid_rig/launch/: display.launch  gazebo.launch
ros/tabletop_description/trapezoid_rig/meshes/: trap_Link.stl
ros/tabletop_description/trapezoid_rig/urdf/: trapezoid near robot.csv  trapezoid near robot.urdf
ros/tabletop_description/urdf/: common_macro.xacro  cylinder_macro.xacro  eef_macro.xacro  scene_macro.xacro  sphere_macro.xacro  tabletop.urdf.xacro  tabletop_control.urdf.xacro  tabletop_controlled.urdf.xacro  tabletop_macro.xacro
ros/tabletop_server/: Dockerfile  package.xml  setup.cfg  setup.py
ros/tabletop_server/config/: commander.yaml  commander_v1.yaml  example_config.yaml  rosbag.yaml  rosbag_interfaces.yaml  rosbag_sqlite3.yaml  sample_run.yaml  sample_trial.yaml  server.rviz  test_goal_publishers_config.yaml  test_server.rviz  ur5e_calibration.yaml  ursim_calibration.yaml
ros/tabletop_server/launch/: commander.launch.py  control.launch.py  moveit.launch.py  server.launch.py  test.launch.py  test2.launch.py  test_ur_control.launch.py
ros/tabletop_server/rviz/: server.rviz
ros/tabletop_server/tabletop_server/: __init__.py  aio_executor.py  base.py  camera.py  commander.py  executor.py  main.py  mock_teensy.py  sensor.py  test.ipynb  test.py  utils.py
ros/tabletop_server/tabletop_server/flic_client/: __init__.py  aioflic.py  aioflic_test.py  client_aio.py  client_thread.py  fliclib.py  new_scan_wizard.py  piano.py  tabletop_aioflic.py
ros/tabletop_server/tabletop_server/io/: juice_tube.py  robot.py
ros/tabletop_server/tabletop_server/mock_io/: base.py
ros/tabletop_server/tabletop_server/nodes/: __init__.py  base.py  camera.py  commander.py  eyelink.py  flic.py  mock_dashboard.py  mock_teensy.py  sensor.py
ros/tabletop_server/tabletop_server/tasks/: base.py
ros/tabletop_teensy/: package.xml  platformio.ini
ros/tabletop_teensy/extra_packages/: tabletop_msgs
ros/tabletop_teensy/src/: main.cpp
src/ros/tabletop/tabletop_interfaces/: CMakeLists.txt  package.xml
src/ros/tabletop/tabletop_interfaces/action/: EyelinkSmoothPursuit.action  FlicResponseTime.action
src/ros/tabletop/tabletop_interfaces/msg/: Eyelink.msg  EyelinkArray.msg  TeensySensor.msg
src/ros/tabletop/tabletop_interfaces/srv/: EyelinkStartRecording.srv  Ping.srv  SetArmLock.srv  SetReward.srv  SetSmartglass.srv  SetSolenoid.srv
src/ros/tabletop/tabletop_moveit_config/: CMakeLists.txt  package.xml
src/ros/tabletop/tabletop_moveit_config/config/: chomp_planning.yaml  isaac_ros_cumotion_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_dual.yaml  moveit_controllers_rcm.yaml  moveit_cpp.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  stomp_planning.yaml
src/ros/tabletop/tabletop_moveit_config/launch/: moveit.launch.py  ur_moveit.launch.py
src/ros/tabletop/tabletop_moveit_config/srdf/: dual_tabletop.srdf.xacro  dual_tabletop_macro.srdf.xacro  tabletop.srdf.xacro  (+1 more)
src/ros/tabletop/tabletop_tasks/: package.xml  setup.cfg
src/ros/tabletop/tabletop_unbag/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
src/ros/tabletop/tabletop_utils/: package.xml  setup.py
src/tabletop_server/: package.xml  setup.cfg  setup.py
src/tabletop_server/config/: commander.yaml  rosbag_interfaces.yaml
src/tabletop_server/launch/: commander.launch.py  server.launch.py
src/tabletop_server/rviz/: server.rviz
src/tabletop_server/tabletop_server/nodes/: base.py  camera.py  commander.py  eyelink.py  flic.py  mock_teensy.py
tabletop_moveit_interface/: CMakeLists.txt  package.xml
tabletop_moveit_interface/include/tabletop_moveit_interface/: moveit_pose_client.hpp  moveit_pose_server.hpp  server.hpp
tabletop_moveit_interface/src/: moveit_client_node.cpp  moveit_pose_client.cpp  moveit_pose_server.cpp  moveit_server_node.cpp  server.cpp  server_node.cpp
tabletop_server/: Dockerfile  package.xml  setup.py
tabletop_server/config/: commander.yaml  core_params.yaml  tabletop_server.yaml  test_goal_publishers_config.yaml
tabletop_server/launch/: moveit.launch.py  server.launch.py  server_moveit_interface.launch.py  server_moveit_py.launch.py  tabletop_server.launch.py  tabletop_server_moveit_py.launch.py  test_joint_trajectory.launch.py
tabletop_server/tabletop_server/: commander.py  commander_moveit_interface.py  commander_moveit_py.py  monkey.py  nodes.py  server.py  server_moveit.py  teensy.py  teensy_controller.py  teensy_sensor.py
tabletop_server/tabletop_server/io/: arm_door.py
tabletop_server/tabletop_server/trial_generators/: __init__.py
(+851 files in other folders)
