[project]
name = "tabletop-py"
version = "0.1.0"
description = "ROS-independent Python utilities for the TableTop project"
authors = [{ name = "Valmiki Kothare", email = "valmiki.kothare.vk@gmail.com" }]
requires-python = "~=3.12.0"
dependencies = [
  "colcon-common-extensions>=0.3.0",
  "colcon-mixin>=0.2.3",
  "debugpy>=1.8.16",
  "lark>=1.2.2",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "pandas>=2.3.1",
  "rosdep>=0.26.0",
  "scikit-learn>=1.7.1",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "transformations>=2025.8.1",
  "trimesh[easy]>=4.7.4",
]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "mingus>=0.6.1",
  "pre-commit>=4.3.0",
  "pyglet<2",
  "ros2-graph>=0.0.5",
]

[project.optional-dependencies]
cpu = ["torch>=2.8.0"]
cu128 = ["torch>=2.8.0"]
eyelink = ["sr-research-pylink>=2.1.1145.post1"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
sr-research-pylink = { index = "sr-research" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "sr-research"
url = "https://pypi.sr-research.com"
explicit = true

[project.scripts]
gaze-preprocess = "tabletop_py.gaze.preprocess:main"
gaze-train = "tabletop_py.gaze.train:main"
gaze-visualize = "tabletop_py.gaze.visualize:main"
gaze-calibrate = "tabletop_py.gaze.calibrate:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
