[project]
name = "tabletop-py"
version = "0.1.0"
description = "ROS-independent Python utilities for the TableTop project"
requires-python = "~=3.12.0"
authors = [
  { name = "Valmiki Kothare", email = "valmiki.kothare.vk@gmail.com" },
]
dependencies = [
  "colcon-common-extensions>=0.3.0",
  "colcon-mixin>=0.2.3",
  "debugpy>=1.8.16",
  "lark>=1.2.2",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "opencv-python>=4.11.0.86",
  "pandas>=2.3.1",
  "pydantic>=2.12.5",
  "python-dotenv[cli]>=1.2.1",
  "pyyaml>=6.0.3",
  "rosdep>=0.26.0",
  "scikit-learn>=1.7.1",
  "sr-research-pylink>=2.1.1145.post1; platform_machine == 'x86_64'",
  "torch>=2.8.0",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "transformations>=2025.8.1",
  "trimesh[easy]>=4.7.4",
]

[project.scripts]
gaze-calibrate = "tabletop_py.gaze.calibrate:main"
gaze-preprocess = "tabletop_py.gaze.preprocess:main"
gaze-train = "tabletop_py.gaze.train:main"
gaze-visualize = "tabletop_py.gaze.visualize:main"

[project.optional-dependencies]
cpu = ["torch>=2.8.0"]
cu126 = ["torch>=2.8.0"]
cu128 = ["torch>=2.8.0"]
cu130 = ["torch>=2.8.0"]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "mingus>=0.6.1",
  "pre-commit>=4.3.0",
  "pyglet<2",
  "ros2-graph>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
sr-research-pylink = { index = "sr-research" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "sr-research"
url = "https://pypi.sr-research.com"
explicit = true
