[project]
name = "tabletop-py"
version = "0.1.0"
description = "ROS-independent Python utilities for the TableTop project"
requires-python = "~=3.12.0"
authors = [
  { name = "Valmiki Kothare", email = "valmiki.kothare.vk@gmail.com" },
]
dependencies = [
  "colcon-common-extensions>=0.3.0",
  "colcon-mixin>=0.2.3",
  "debugpy>=1.8.16",
  "lark>=1.2.2",
  "lmdb>=1.5.1",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "opencv-python>=4.11.0.86",
  "pandas>=2.3.1",
  "pydantic>=2.12.5",
  "python-dotenv[cli]>=1.2.1",
  "pyyaml>=6.0.3",
  "empy<4",
  "scikit-learn>=1.7.1",
  "sr-research-pylink>=2.1.1145.post1; platform_machine == 'x86_64'",
  "torch>=2.8.0",
  "torcheval>=0.0.7",
  "tqdm>=4.67.1",
  "transformations>=2025.8.1",
  "trimesh[easy,recommend]>=4.7.4",
  "scapy>=2.7.0",
]

[project.scripts]
tt-gaze-calibrate = "tabletop_py.gaze.calibrate:main"
tt-gaze-preprocess = "tabletop_py.gaze.preprocess:main"
tt-gaze-train = "tabletop_py.gaze.train:main"
tt-gaze-predict = "tabletop_py.gaze.predict:main"
tt-gaze-visualize = "tabletop_py.gaze.visualize:main"
tt-flic-client = "tabletop_py.flic.client:main"
tt-flic-scapy = "tabletop_py.flic.scapy_client:main"


[project.optional-dependencies]
cpu = ["torch>=2.8.0"]
cu126 = ["torch>=2.8.0"]
cu128 = ["torch>=2.8.0"]
cu130 = ["torch>=2.8.0"]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "mingus>=0.6.1",
  "pre-commit>=4.3.0",
  "pyglet<2",
  "ros2-graph>=0.0.5",
]
# Documentation site toolchain (mkdocs). Build/serve with:
#   uv run --group docs mkdocs serve   (or `mkdocs build`)
# mkdocstrings uses griffe's static analysis, so the API reference is
# generated from source without importing ROS / hardware dependencies.
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
  "ruff>=0.15.17",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
