<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletop_server</name>

  <version>0.0.0</version>

  <description>The server nodes for the TableTop project</description>

  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <license>MIT</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ur</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>