<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletop_moveit_config</name>

  <version>0.0.1</version>

  <description>The MoveIt 2 configuration package for the Tabletop project.</description>

  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>

  <author email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <!-- <exec_depend>isaac_ros_cumotion_moveit</exec_depend> -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <!-- <exec_depend>pick_ik</exec_depend> -->
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>tabletop_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
