<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletop_tasks</name>

  <version>0.0.0</version>

  <description>The tasks for the TableTop project</description>

  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>

  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>tabletop_rig</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
