<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletop_unbag</name>
  <version>0.0.0</version>
  <description>Generic ROS 2 bag (MCAP) to CSV / image exporter via runtime message introspection. C++ port of tabletop_rig.utils.rosbag.</description>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>fastcdr</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>

  <!-- mcap storage plugin, loaded at runtime by the rosbag2 reader -->
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
