<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tabletop_utils</name>
  <version>0.0.0</version>
  <description>Common utilities for the TableTop project</description>
  <maintainer email="valmiki.kothare.vk@gmail.com">Valmiki Kothare</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tabletop_interfaces</exec_depend>
  <exec_depend>mocap4r2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
